# DEIMv2

./: .gitignore  README.md  pyproject.toml
configs/: runtime.yml
configs/base/: dataloader.yml
configs/dataset/: wholebody34.yml
configs/deimv2/: deimv2_dinov3_s_wholebody34.yml  deimv2_dinov3_s_wholebody34ft.yml  deimv2_dinov3_x_wholebody34.yml  deimv2_dinov3_x_wholebody34ft.yml  deimv2_hgnetv2_atto_coco.yml  deimv2_hgnetv2_atto_wholebody34.yml  deimv2_hgnetv2_atto_wholebody34ft.yml  deimv2_hgnetv2_femto_coco.yml  deimv2_hgnetv2_femto_wholebody34.yml  deimv2_hgnetv2_femto_wholebody34ft.yml  deimv2_hgnetv2_n_coco.yml  deimv2_hgnetv2_n_wholebody34.yml  deimv2_hgnetv2_n_wholebody34ft.yml  deimv2_hgnetv2_pico_coco.yml  deimv2_hgnetv2_pico_wholebody34.yml  deimv2_hgnetv2_pico_wholebody34ft.yml  deimv2_hgnetv2_s_coco.yml
demo/wholebody34/: README.md  demo_deimv2_onnx_wholebody34_with_edges.py
engine/backbone/: dinov3_adapter.py
engine/data/: dataloader.py
engine/data/transforms/: __init__.py  _transforms.py
engine/deim/: deim_criterion.py  deim_decoder.py  dfine_decoder.py  dfine_utils.py  distillation.py  hybrid_encoder.py  postprocessor.py  rtdetrv2_decoder.py
engine/solver/: _solver.py  det_solver.py
tools/dataset/: README.md  yolo2coco.py  yolov9_dataset_to_txt.py
tools/dataset/dataset_shaping_tools/: 10_make_wholebody34_annotation.py  11_make_dataset_wholebody34.py
tools/dataset/oversampling_tools/: 20_make_train_txt.py  (+4 more)
tools/deployment/: README.md  convert_tf_to_coreml.py  export_onnx.py  litert_benchmark.py  make_prep.py
