[project]
name = "deimv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.12"
dependencies = [
    "calflops==0.3.2",
    "faster-coco-eval==1.6.7",
    "mmcv==2.2.0",
    "onnx==1.19.0",
    "onnxruntime==1.23.0",
    "onnxsim==0.4.33",
    "onnxslim==0.1.69",
    "pyyaml==6.0.3",
    "scipy==1.16.2",
    "tensorboard==2.20.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "transformers==4.56.2",
]
