[project]
name = "deimv2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.12"
dependencies = [
    "calflops==0.3.2",
    "faster-coco-eval==1.6.7",
    "gdown==5.2.0",
    "mmcv==2.2.0",
    "numpy==1.26.4",
    "onnx==1.19.0",
    "onnx-graphsurgeon==0.5.8",
    "onnx2tf==1.28.2",
    "onnxruntime-gpu==1.23.0",
    "onnxsim==0.4.30",
    "onnxslim==0.1.69",
    "pybind11==3.0.1",
    "pyyaml==6.0.3",
    "scipy==1.16.2",
    "sit4onnx==1.0.10",
    "snc4onnx==1.0.14",
    "sor4onnx==1.0.7",
    "tensorboard==2.20.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "transformers==4.56.2",
]
[tool.uv]
override-dependencies = [
    "sympy>=1.13.1,<1.14",
]
